tests/ui/codegen/mir/validation/validate_memory_object_boundary.mir
//@compile-flags: --pass dce
//~? ERROR: [fn0] memory-object signature type `memorybytes` survives the `memory-lowered` phase boundary
//~? ERROR: [fn0] memory-object signature type `memorystruct` survives the `memory-lowered` phase boundary
//~? ERROR: [fn0] [bb0, inst0] memory-object instruction `alloc` survives the `memory-lowered` phase boundary
//~? ERROR: [fn0] [bb0, inst1] memory-object instruction `memory_object_len` survives the `memory-lowered` phase boundary
//~? ERROR: [fn0] [bb0, inst2] memory-object instruction `set_memory_object_len` survives the `memory-lowered` phase boundary
@module ValidateMemoryObjectBoundary
@phase memory-lowered

fn @object(arg0: memorybytes) -> memorystruct {
  bb0:
    v1 = alloc memorystruct<1>, exact, uninitialized, infallible, 32
    v2 = memory_object_len memorybytes, arg0
    set_memory_object_len memorybytes, arg0, v2
    ret v1
}
